# MeowIDI

./: CMakeLists.txt  README.md  copy-assets.cmake
assets/: main_window.ui
meowidi/: main.cpp  main_window.cpp  main_window.hpp  midi_player.cpp  midi_player.hpp
meowidi/forms/: main_window.hpp
